--- a/projects/ng-asax-jalali-date-range-picker/src/lib/assets/Webfonts/fontiran.css
+++ b/projects/ng-asax-jalali-date-range-picker/src/lib/assets/Webfonts/fontiran.css
@@ -1,4 +1,4 @@
-@font-face {
+/* @font-face {
   font-family: IRANYekanX;
   font-style: normal;
   font-weight: 100;
@@ -20,7 +20,7 @@
   font-weight: 300;
   src: url("woff/IRANYekanX-Light.woff") format("woff"),
     url("woff2/IRANYekanX-Light.woff2") format("woff2");
-}
+} */
 
 @font-face {
   font-family: IRANYekanX;
@@ -29,7 +29,7 @@
   src: url("woff/IRANYekanX-Medium.woff") format("woff"),
     url("woff2/IRANYekanX-Medium.woff2") format("woff2");
 }
-
+/*
 @font-face {
   font-family: IRANYekanX;
   font-style: normal;
@@ -83,4 +83,4 @@
   font-weight: normal;
   src: url("woff/IRANYekanX-Regular.woff") format("woff"),
     url("woff2/IRANYekanX-Regular.woff2") format("woff2");
-}
+} */
