--- a/projects/ng-asax-jalali-date-range-picker/src/lib/ng-asax-jalali-date-range-picker.component.scss
+++ b/projects/ng-asax-jalali-date-range-picker/src/lib/ng-asax-jalali-date-range-picker.component.scss
@@ -1,5 +1,9 @@
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
 @import "assets/Webfonts/fontiran.css";
-@import "./tailwind";
+
+// @import "./tailwind.css";
 
 input::-webkit-outer-spin-button,
 input::-webkit-inner-spin-button {
@@ -8,20 +12,25 @@ input::-webkit-inner-spin-button {
   margin: 0; /* <-- Apparently some margin are still there even though it's hidden */
 }
 
-.ng-date-range-picker_container {
+.ng-date-range-picker_container,
+input {
   direction: rtl;
-  @apply mt-2 relative;
-  font-family: IRANYekanX;
-  -moz-font-feature-settings: "ss02";
-  -webkit-font-feature-settings: "ss02";
-  font-feature-settings: "ss02";
   font-size: 13px;
+  @apply mt-2 relative;
+  font-family: IRANYekanX !important;
+  font-feature-settings: "ss02" !important;
+  -moz-font-feature-settings: "ss02" !important;
+  -webkit-font-feature-settings: "ss02" !important;
 }
 
 .w-80p {
   width: 80%;
 }
 
-.ng-date-range-picker_input_label {
+.ng-date-range-picker_input-label {
   @apply absolute top-[-10px] right-[1px] text-xs px-2 bg-white;
+  font-size: 11px;
+}
+.ng-date-range-picker_input-container {
+  @apply border border-solid rounded-[4px] px-2 py-[3px] w-52 cursor-pointer relative;
 }
