--- a/projects/ng-asax-jalali-date-range-picker/src/lib/ng-asax-jalali-date-range-picker.component.scss
+++ b/projects/ng-asax-jalali-date-range-picker/src/lib/ng-asax-jalali-date-range-picker.component.scss
@@ -1,9 +1,9 @@
-@tailwind base;
-@tailwind components;
-@tailwind utilities;
+// @tailwind base;
+// @tailwind components;
+// @tailwind utilities;
 @import "assets/Webfonts/fontiran.css";
 
-// @import "./tailwind.css";
+@import "./tailwind";
 
 input::-webkit-outer-spin-button,
 input::-webkit-inner-spin-button {
