--- a/projects/ng-asax-jalali-date-range-picker/src/lib/ng-asax-jalali-date-range-picker.component.html
+++ b/projects/ng-asax-jalali-date-range-picker/src/lib/ng-asax-jalali-date-range-picker.component.html
@@ -7,6 +7,7 @@
       <p class="ng-date-range-picker_input-label">از تاریخ</p>
       <p>{{ getDate("from") }}</p>
     </div>
+
     <div
       class="ng-date-range-picker_input-container"
       (click)="toggleShowDateRangePicker()"
@@ -19,12 +20,12 @@
       style="width: 80vw"
       *ngIf="showDateRangePicker"
       [ngClass]="{ 'left-0': !isRightAlign }"
-      class="border border-1 border-solid border-gray-1 rounded-sm absolute top-6 z-50 bg-white grid grid-cols-1 md:grid-cols-7 mt-4"
+      class="border border-1 border-solid border-gray-1 rounded-sm absolute top-6 z-50 bg-white grid grid-cols-1 md:grid-cols-7 mt-4 shadow-lg"
     >
       <div class="flex flex-col border-l border-gray-1 col-span-2">
         <div
           *ngFor="let item of options; let i = index"
-          class="border-b border-gray-1 py-3 px-2 cursor-pointer"
+          class="border-b border-gray-1 py-2 px-2 cursor-pointer"
           (click)="handleOptionClicked(item.type)"
         >
           <p>
@@ -32,7 +33,7 @@
           </p>
         </div>
         <div
-          class="border-b border-gray-1 py-3 px-2"
+          class="border-b border-gray-1 py-2 px-2"
           [ngClass]="
             _tempFromDate ? 'cursor-pointer' : 'cursor-not-allowed text-gray-2'
           "
@@ -45,35 +46,40 @@
           </p>
         </div>
 
-        <div class="flex flex-col items-start px-2">
-          <div class="flex flex-1 items-center justify-center gap-2 py-3">
+        <div class="flex flex-col items-start px-2 py-4">
+          <div
+            class="flex flex-1 items-center justify-center gap-1 border border-gray-1 rounded-full px-1"
+          >
             <input
               #monthInputNumber
               type="number"
-              placeholder="ماه قبل"
-              class="text-center outline-none border-b border-primary-1 w-16"
+              placeholder="از ماه قبل تا امروز"
+              class="text-center outline-none w-32 rounded-full mb-1"
             />
+            <!-- (blur)="setMonth()" -->
             <button
-              class="bg-primary-1 px-2 py-1 rounded-md text-white text-xs"
+              class="bg-primary-1 px-2 py-1 text-white text-xs rounded-full"
               type="button"
               (click)="setMonth()"
             >
-              ثبت
+              انتخاب
             </button>
           </div>
-          <div class="flex flex-1 items-center justify-center gap-2 py-3">
+          <div
+            class="flex flex-1 items-center justify-center gap-1 border border-gray-1 rounded-full px-1 mt-2"
+          >
             <input
               #dayInputNumber
               type="number"
-              placeholder="روز قبل"
-              class="text-center outline-none border-b border-primary-1 w-16"
+              placeholder="از روز قبل تا امروز"
+              class="text-center outline-none w-32 rounded-full mb-1"
             />
             <button
-              class="bg-primary-1 px-2 py-1 rounded-md text-white text-xs"
+              class="bg-primary-1 px-2 py-1 text-white text-xs rounded-full"
               type="button"
               (click)="setDay()"
             >
-              ثبت
+              انتخاب
             </button>
           </div>
         </div>
@@ -89,7 +95,7 @@
                 <p>{{ getPersianTextDate("from") }}</p>
               </div>
             </div>
-            <div class="flex justify-between mt-3 mr-3">
+            <div class="flex justify-between mr-3 mt-5">
               <div
                 (click)="handlePrevious()"
                 class="w-6 h-6 flex items-center justify-center bg-gray-200 rounded cursor-pointer"
@@ -108,7 +114,7 @@
                   />
                 </svg>
               </div>
-              <div class="flex flex-1 justify-center">
+              <div class="flex flex-1 justify-center gap-1">
                 <p class="cursor-pointer" (click)="toggleFromMonthPicker()">
                   {{ monthsOfYear[_fromCalendar.month] }}
                 </p>
@@ -171,7 +177,7 @@
             </div>
 
             <!-- ------------------ DAYS OF MONTH ------------------ -->
-            <div class="grid grid-cols-7 mt-3 mr-3 mb-4 ml-1 cursor-pointer">
+            <div class="grid grid-cols-7 mt-3 mb-4 ml-1 cursor-pointer">
               <div
                 class="py-1 my-1"
                 *ngFor="
@@ -186,43 +192,43 @@
                     : undefined
                 "
                 [ngClass]="{
-            'bg-primary-1 text-white': isInRange(
-              _fromCalendar.year +
-                '-' +
-                (_fromCalendar.month + 1 < 10 ? '0' : '') +
-                (_fromCalendar.month + 1) +
-                '-' +
-                (item < 10 ? '0' : '') +
-                item
-            ),
-            'rounded-r-xl': isFirstRangeDay(
-              _fromCalendar.year +
-                '-' +
-                (_fromCalendar.month + 1 < 10 ? '0' : '') +
-                (_fromCalendar.month + 1) +
-                '-' +
-                (item < 10 ? '0' : '') +
-                item
-            ),
-            'rounded-l-xl': isLastRangeDay(
-              _fromCalendar.year +
-                '-' +
-                (_fromCalendar.month + 1 < 10 ? '0' : '') +
-                (_fromCalendar.month + 1) +
-                '-' +
-                (item < 10 ? '0' : '') +
-                item
-            ),
-            'text-gray-2 bg-gray-100 cursor-not-allowed': isDisabled(
-              _fromCalendar.year +
-                '-' +
-                (_fromCalendar.month + 1 < 10 ? '0' : '') +
-                (_fromCalendar.month + 1) +
-                '-' +
-                (item < 10 ? '0' : '') +
-                item
-            ),
-          }"
+                  'bg-primary-1 text-white': isInRange(
+                    _fromCalendar.year +
+                      '-' +
+                      (_fromCalendar.month + 1 < 10 ? '0' : '') +
+                      (_fromCalendar.month + 1) +
+                      '-' +
+                      (item < 10 ? '0' : '') +
+                      item
+                  ),
+                  'rounded-r-xl': isFirstRangeDay(
+                    _fromCalendar.year +
+                      '-' +
+                      (_fromCalendar.month + 1 < 10 ? '0' : '') +
+                      (_fromCalendar.month + 1) +
+                      '-' +
+                      (item < 10 ? '0' : '') +
+                      item
+                  ),
+                  'rounded-l-xl': isLastRangeDay(
+                    _fromCalendar.year +
+                      '-' +
+                      (_fromCalendar.month + 1 < 10 ? '0' : '') +
+                      (_fromCalendar.month + 1) +
+                      '-' +
+                      (item < 10 ? '0' : '') +
+                      item
+                  ),
+                  'text-gray-2 bg-gray-100 cursor-not-allowed': isDisabled(
+                    _fromCalendar.year +
+                      '-' +
+                      (_fromCalendar.month + 1 < 10 ? '0' : '') +
+                      (_fromCalendar.month + 1) +
+                      '-' +
+                      (item < 10 ? '0' : '') +
+                      item
+                  ),
+                }"
               >
                 <p
                   class="text-center"
@@ -256,10 +262,10 @@
               </div>
             </div>
 
-            <div class="flex justify-between mt-3 ml-3">
+            <div class="flex justify-between mt-5 ml-3">
               <div class="w-4"></div>
               <div
-                class="flex justify-center items-center flex-1 text-center cursor-pointer"
+                class="flex justify-center items-center flex-1 text-center cursor-pointer gap-1"
               >
                 <p (click)="toggleToMonthPicker()">
                   {{ monthsOfYear[_toCalendar.month] }}
@@ -339,7 +345,7 @@
               </div>
             </div>
             <!-- ---------------- TO YEAR PICKER ---------------- -->
-            <div class="grid grid-cols-7 mt-3 ml-3 mb-4 cursor-pointer">
+            <div class="grid grid-cols-7 mt-3 mb-4 cursor-pointer">
               <div
                 *ngFor="
                   let item of getRangeDays(_toCalendar.dayCount);
@@ -413,7 +419,7 @@
 
           <!-- ------------------ TO CALENDAR ------------------ -->
         </div>
-        <div class="flex justify-center gap-2 mt-4">
+        <!-- <div class="flex justify-center gap-2 mt-4">
           <div class="flex gap-1 items-center">
             <div
               class="w-3 h-3 rounded-full border border-primary-1 bg-primary-1"
@@ -432,7 +438,7 @@
             ></div>
             <p class="text-xs">روزهای غیر فعال</p>
           </div>
-        </div>
+        </div> -->
       </div>
     </div>
   </div>
