--- a/projects/ng-asax-jalali-date-range-picker/src/lib/ng-asax-jalali-date-range-picker.component.scss
+++ b/projects/ng-asax-jalali-date-range-picker/src/lib/ng-asax-jalali-date-range-picker.component.scss
@@ -12,6 +12,11 @@ input::-webkit-inner-spin-button {
   margin: 0; /* <-- Apparently some margin are still there even though it's hidden */
 }
 
+/* Firefox */
+input[type="number"] {
+  -moz-appearance: textfield;
+}
+
 .ng-date-range-picker_container,
 input {
   direction: rtl;
@@ -31,6 +36,7 @@ input {
   @apply absolute top-[-10px] right-[1px] text-xs px-2 bg-white;
   font-size: 11px;
 }
+
 .ng-date-range-picker_input-container {
   @apply border border-solid rounded-[4px] px-2 py-[2px] w-52 cursor-pointer relative;
 }
