--- a/projects/ng-asax-jalali-date-range-picker/src/lib/ng-asax-jalali-date-range-picker.component.html
+++ b/projects/ng-asax-jalali-date-range-picker/src/lib/ng-asax-jalali-date-range-picker.component.html
@@ -17,7 +17,7 @@
     </div>
 
     <div
-      style="width: 80vw"
+      style="width: 70vw"
       *ngIf="showDateRangePicker"
       [ngClass]="{ 'left-0': !isRightAlign }"
       class="border border-1 border-solid border-gray-1 rounded-sm absolute top-6 z-50 bg-white grid grid-cols-1 md:grid-cols-7 mt-4 shadow-lg"
@@ -95,7 +95,7 @@
                 <p>{{ getPersianTextDate("from") }}</p>
               </div>
             </div>
-            <div class="flex justify-between mr-3 mt-5">
+            <div class="flex justify-between mr-2 mt-5">
               <div
                 (click)="handlePrevious()"
                 class="w-6 h-6 flex items-center justify-center bg-gray-200 rounded cursor-pointer"
@@ -165,7 +165,7 @@
             </div>
             <!-- ---------------- FROM YEAR PICKER ---------------- -->
 
-            <div class="flex w-full mt-4">
+            <div class="flex flex-1 mt-4 mr-2 ml-1">
               <div
                 *ngFor="let item of daysOfWeek; let i = index"
                 class="flex-1 text-center"
@@ -177,9 +177,10 @@
             </div>
 
             <!-- ------------------ DAYS OF MONTH ------------------ -->
-            <div class="grid grid-cols-7 mt-3 mb-4 ml-1 cursor-pointer">
+            <div class="grid grid-cols-7 mt-3 mb-4 cursor-pointer mr-2 ml-1">
               <div
-                class="py-1 my-1"
+                class="py-1"
+                style="margin-top: 2px; margin-bottom: 2px"
                 *ngFor="
                   let item of getRangeDays(_fromCalendar.dayCount);
                   let i = index
@@ -262,7 +263,7 @@
               </div>
             </div>
 
-            <div class="flex justify-between mt-5 ml-3">
+            <div class="flex justify-between mt-5 ml-2">
               <div class="w-4"></div>
               <div
                 class="flex justify-center items-center flex-1 text-center cursor-pointer gap-1"
@@ -295,7 +296,7 @@
               </div>
             </div>
 
-            <div class="flex w-full mt-4 ml-3">
+            <div class="flex flex-1 mt-4 ml-2 mr-1">
               <div
                 *ngFor="let item of daysOfWeek; let i = index"
                 class="flex-1 text-center"
@@ -344,8 +345,9 @@
                 </p>
               </div>
             </div>
+
             <!-- ---------------- TO YEAR PICKER ---------------- -->
-            <div class="grid grid-cols-7 mt-3 mb-4 cursor-pointer">
+            <div class="grid grid-cols-7 mt-3 mb-4 cursor-pointer mr-1 ml-2">
               <div
                 *ngFor="
                   let item of getRangeDays(_toCalendar.dayCount);
@@ -358,7 +360,8 @@
                       : _toCalendar.dayOfFirstDate + 1
                     : undefined
                 "
-                class="py-1 my-1"
+                class="py-1"
+                style="margin-top: 2px; margin-bottom: 2px"
                 [ngClass]="{
             'bg-primary-1 text-white': isInRange(
               _toCalendar.year +
