--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -9,14 +9,14 @@
     class="flex justify-between gap-4 mt-16"
     [ngClass]="{ 'flex-row-reverse': !isRightAlign }"
   >
-    <ng-asax-jalali-date-range-picker
-      [toDate]="toDate"
-      [minDate]="minDate"
-      [maxDate]="maxDate"
-      [fromDate]="fromDate"
-      [isRightAlign]="isRightAlign"
-      (onChange)="handleChange($event)"
-    ></ng-asax-jalali-date-range-picker>
+    <ng-asax-jalali-date-range-picker></ng-asax-jalali-date-range-picker>
+    <p>sadasd</p>
+    <!-- [toDate]="toDate"
+    [minDate]="minDate"
+    [maxDate]="maxDate"
+    [fromDate]="fromDate"
+    [isRightAlign]="isRightAlign"
+    (onChange)="handleChange($event)" -->
 
     <div class="flex flex-col w-1/3">
       <p class="text-xl font-bold">راهنمای ورودی های قابل قبول</p>
