--- a/projects/ng-asax-jalali-date-range-picker/src/lib/ng-asax-jalali-date-range-picker.component.scss
+++ b/projects/ng-asax-jalali-date-range-picker/src/lib/ng-asax-jalali-date-range-picker.component.scss
@@ -1,9 +1,4 @@
-@tailwind base;
-@tailwind components;
-@tailwind utilities;
-@import "assets/Webfonts/fontiran.css";
-
-// @import "./tailwind";
+@import "./assets/fonts/vazirmatn/misc/Farsi-Digits/Vazirmatn-FD-font-face.css";
 
 input::-webkit-outer-spin-button,
 input::-webkit-inner-spin-button {
@@ -12,31 +7,209 @@ input::-webkit-inner-spin-button {
   margin: 0; /* <-- Apparently some margin are still there even though it's hidden */
 }
 
-/* Firefox */
-input[type="number"] {
-  -moz-appearance: textfield;
+* {
+  font-family: Vazirmatn FD, IRANYekanX
+  
 }
 
-.ng-date-range-picker_container,
-input {
-  direction: rtl;
-  font-size: 13px;
-  @apply mt-2 relative;
-  font-family: IRANYekanX !important;
-  font-feature-settings: "ss02" !important;
-  -moz-font-feature-settings: "ss02" !important;
-  -webkit-font-feature-settings: "ss02" !important;
+.flex {
+  display: flex;
 }
 
-.w-80p {
-  width: 80%;
+.flex-col {
+  flex-direction: column;
 }
 
-.ng-date-range-picker_input-label {
-  @apply absolute top-[-10px] right-[1px] text-xs px-2 bg-white;
-  font-size: 11px;
+.flex-row {
+  flex-direction: row;
 }
 
-.ng-date-range-picker_input-container {
-  @apply border border-solid rounded-[4px] px-2 py-[2px] w-52 cursor-pointer relative;
+.left-0 {
+  left: 0;
+}
+
+.w-full {
+  width: 100%;
+}
+
+.absolute {
+  position: absolute;
+}
+
+.items-center {
+  align-items: center;
+}
+
+.items-end {
+  align-items: end;
+}
+
+.items-start {
+  align-items: start;
+}
+
+.justify-center {
+  justify-content: center;
+}
+
+.justify-between {
+  justify-content: center;
+}
+
+.relative {
+  position: relative;
+}
+
+.absolute {
+  position: absolute;
+}
+
+.cursor-pointer {
+  cursor: pointer;
+}
+
+.ng-asax-jalali-date-picker {
+  &__container {
+    direction: rtl;
+    background-color: red;
+    font-size: 13px;
+    margin-top: 8px;
+    position: relative;
+    font-family: IRANYekanX !important;
+    font-feature-settings: "ss02" !important;
+    -moz-font-feature-settings: "ss02" !important;
+    -webkit-font-feature-settings: "ss02" !important;
+  }
+}
+
+.mb-0 {
+  margin: 0;
+}
+
+.mt-3 {
+  margin-top: 12px;
+}
+
+.mt-1 {
+  margin-top: 4px;
+}
+
+.mr-2 {
+  margin-right: 8px;
+}
+
+.ml-2 {
+  margin-top: 8px;
+}
+
+.mt-4 {
+  margin-top: 16px;
+}
+
+.mt-5 {
+  margin-top: 20px;
+}
+
+.px-2 {
+  padding: 0 8px;
+}
+
+.p-2 {
+  padding: 8px;
+}
+
+.py-1 {
+  padding: 4px 0;
+}
+
+.py-2 {
+  padding: 8px 0;
+}
+
+.ml-1 {
+
+  margin-left: 4px
+}
+
+.ml-2 {
+  margin-left: 8px
+}
+
+.rounded-l-xl {
+  border-top-left-radius: 8px;
+  border-bottom-left-radius: 8px;
+}
+
+.rounded-r-xl {
+  border-top-right-radius: 8px;
+  border-bottom-right-radius: 8px;
+}
+
+.cursor-pointer {
+  cursor: pointer;
+}
+
+.cursor-pointer-not-allowed {
+  cursor: not-allowed;
+}
+
+.border-gray-1 {
+  border: 1px solid #e0e3eb;
+}
+
+.border-l-gray-1 {
+  border-left: 1px solid #e0e3eb;
+}
+
+.flex-1 {
+  flex: 1 0 auto;
+}
+
+.grid {
+  display: grid;
+}
+
+.grid-cols-7 {
+  grid-template-columns: repeat(7, 1fr);
+}
+
+.grid-cols-3 {
+  grid-template-columns: repeat(3, 1fr);
+}
+
+.text-white {
+  color: white;
+}
+
+.text-center {
+  text-align: center;
+}
+
+.bg-gray-200 {
+  background-color: #e0e3eb;
+}
+
+.bg-white {
+  background-color: white;
+}
+
+
+.w-6 {
+  width: 24px;
+}
+
+.h-6 {
+  height: 24px;
+}
+
+.rounded {
+  border-radius: 6px;
+}
+
+.bottom-0 {
+  bottom: 0 !important;
+}
+
+.top-11 {
+  top: 44px !important;
 }
